--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,3 @@
 TAVILY_API_KEY=<your-tavily-api-key>
 OPENAI_API_KEY=<your-openai-api-key>
+MODEL_NAME=gpt-4-1106-preview  # The model to use for LLM calls
